--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,39 @@
-node_modules
-.env
-.vercel
-.devcontainer.json
-dist
-
-output
-temp
-.cursor
-*.bak
-*.exe
-
-# Build output
-dist/
-*.exe
-*-mac-x64
-*-mac-arm64
-*-linux-x64
-*-linux-arm64
-
-# Deno
-.deno/
-deno.lock
-
-# IDE
-.vscode/
-.idea/
-*.iml
-
-# Logs
-*.log
+# Dependencies
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# System Files
-.DS_Store
-Thumbs.db
+# Build outputs
+dist/
+build/
+public/_worker.js
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.production
 
-# Temp files
-temp/
+# Cloudflare
+.wrangler/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Temporary files
 tmp/
-*.tmp
-*.bak
+temp/
+
+# Submodules
+note-to-mp/
