--- a/vercel.json
+++ b/vercel.json
@@ -4,21 +4,24 @@
     {
       "src": "public/**/*",
       "use": "@vercel/static"
+    },
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "dest": "/api/index.js"
     },
     {
       "src": "/(.*)",
       "dest": "/public/$1"
     }
   ],
-  "functions": {
-    "public/_worker.js": {
-      "runtime": "nodejs18.x"
-    }
+  "env": {
+    "WX_APPID": "wx8410119dfbb7f756",
+    "WX_SECRET": "3c93e33e087e57b906f5c341aa5223b9"
   }
 }
