--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,3 +9,8 @@ WX_SECRET = "3c93e33e087e57b906f5c341aa5223b9"
 [env.development.vars]
 WX_APPID = "wx8410119dfbb7f756"
 WX_SECRET = "3c93e33e087e57b906f5c341aa5223b9"
+
+# 确保开发服务器正确路由
+[vars]
+WX_APPID = "wx8410119dfbb7f756"
+WX_SECRET = "3c93e33e087e57b906f5c341aa5223b9"
