fix: 更新Vercel配置支持Coze插件API路由
 修改路由配置:
- /api/* 路由到 vercel.api.js
- /coze/* 路由到 vercel.api.js

 支持的Coze插件接口:
- /coze/token - 获取微信访问令牌
- /coze/draft - 创建文章草稿
- /coze/upload - 上传图片素材
- /coze/publish - 发布文章
- /coze/ip - 获取服务器IP信息

现在 https://mp.miyucaicai.cn 可以完整支持Coze插件调用

--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,18 @@
       "use": "@vercel/static"
     },
     {
-      "src": "api/index.js",
+      "src": "vercel.api.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/vercel.api.js"
+    },
+    {
+      "src": "/coze/(.*)",
+      "dest": "/vercel.api.js"
     },
     {
       "src": "/(.*)",
