--- a/vercel.json
+++ b/vercel.json
@@ -6,24 +6,29 @@
       "use": "@vercel/static"
     },
     {
-      "src": "vercel.api.js",
+      "src": "api/coze.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/vercel.api.js"
+      "dest": "/api/coze.js"
     },
     {
       "src": "/coze/(.*)",
-      "dest": "/vercel.api.js"
+      "dest": "/api/coze.js"
     },
     {
       "src": "/(.*)",
       "dest": "/public/$1"
     }
   ],
+  "functions": {
+    "api/coze.js": {
+      "maxDuration": 10
+    }
+  },
   "env": {
     "WX_APPID": "wx8410119dfbb7f756",
     "WX_SECRET": "3c93e33e087e57b906f5c341aa5223b9"
