fix: 修复token接口传参方式，解决Coze调试失败
 核心修复:
- YAML改为GET+QUERY传参（符合微信官方规范）
- 后端支持GET和POST两种方式（保持兼容）
- 参数从query和body都能获取

 解决问题:
- Coze插件getAccessToken调试失败
- 微信API只支持GET获取token的规范要求
- 参数传递方式不匹配

 修改内容:
- /coze/token: POST -> GET
- requestBody -> parameters (in: query)
- app.all() 支持两种请求方式

现在Coze插件应该可以正常获取token

--- a/coze-final.yaml
+++ b/coze-final.yaml
@@ -7,31 +7,37 @@ servers:
   - url: https://mp.miyucaicai.cn
 paths:
   /coze/token:
-    post:
+    get:  # 改为GET，符合微信官方规范
       operationId: getAccessToken
-      requestBody:
-        content:
-          application/json:
-            schema:
-              properties:
-                appid: {type: string}
-                grant_type: {default: client_credential, type: string}
-                secret: {type: string}
-              required: [appid, secret]
-              type: object
+      parameters:  # 改为QUERY传参
+        - name: appid
+          in: query
+          required: true
+          schema: { type: string }
+          description: 微信公众号AppID
+        - name: secret
+          in: query
+          required: true
+          schema: { type: string }
+          description: 微信公众号AppSecret
+        - name: grant_type
+          in: query
+          required: true
+          schema: { type: string, default: client_credential }
+          description: 授权类型（固定值）
       responses:
         '200':
+          description: 令牌获取成功
           content:
             application/json:
               schema:
+                type: object
                 properties:
-                  success:
-                    example: true
-                    type: boolean
+                  success: { type: boolean, example: true }
                   data:
                     properties:
-                      access_token: {description: 微信API访问令牌, type: string}
-                      expires_in: {description: 过期时间（秒）, type: integer}
+                      access_token: { description: 微信API访问令牌, type: string }
+                      expires_in: { description: 过期时间（秒）, type: integer }
                     type: object
                 type: object
       summary: 获取微信访问令牌
