--- a/coze-final.yaml
+++ b/coze-final.yaml
@@ -22,7 +22,7 @@ paths:
           description: 微信公众号AppSecret
         - name: grant_type
           in: query
-          required: true
+          required: false
           schema: { type: string, default: client_credential }
           description: 授权类型（固定值）
       responses:
