更新项目：恢复完整首页、完善文档和配置

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,167 @@ logs/
 # Temporary files
 tmp/
 temp/
+*.tmp
+*.temp
+
+# Local test files
+test_*.py
+test_*.js
+*_test.py
+*_test.js
+debug_*.py
+debug_*.js
+fix_*.py
+fix_*.js
+check_*.py
+check_*.js
+update_*.py
+update_*.js
+read_*.py
+read_*.js
+remove_*.py
+remove_*.js
+show_*.py
+show_*.js
+setup_*.py
+setup_*.js
+extract_*.py
+extract_*.js
+find_*.py
+find_*.js
+get_*.py
+get_*.js
+import_*.py
+import_*.js
+create_*.py
+create_*.js
+apply_*.py
+apply_*.js
+activate_*.py
+activate_*.js
+upload_*.py
+upload_*.js
+auto_*.py
+auto_*.js
+simple_*.py
+simple_*.js
+final_*.py
+final_*.js
+real_*.py
+real_*.js
+complete_*.py
+complete_*.js
+full_*.py
+full_*.js
+short_*.py
+short_*.js
+with_*.py
+with_*.js
+verbose_*.py
+verbose_*.js
+encoding_*.py
+encoding_*.js
+formats_*.py
+formats_*.js
+coze_*.py
+coze_*.js
+html_*.py
+html_*.js
+ip_*.py
+ip_*.js
+n8n_*.py
+n8n_*.js
+workflow_*.py
+workflow_*.js
+publish_*.py
+publish_*.js
+wechat_*.py
+wechat_*.js
+api_*.py
+api_*.js
+server_*.py
+server_*.js
+draft_*.py
+draft_*.js
+*_direct.py
+*_direct.js
+*_enhanced.py
+*_enhanced.js
+*_optimized.py
+*_optimized.js
+*_minimal.py
+*_minimal.js
+*_fixed.py
+*_fixed.js
+*_final.py
+*_final.js
+*_simple.py
+*_simple.js
+*_complete.py
+*_complete.js
+*_full.py
+*_full.js
+*_real.py
+*_real.js
+*_short.py
+*_short.js
+*_verbose.py
+*_verbose.js
+*_with.py
+*_with.js
+*_encoding.py
+*_encoding.js
+*_formats.py
+*_formats.js
+*_coze.py
+*_coze.js
+*_html.py
+*_html.js
+*_ip.py
+*_ip.js
+*_n8n.py
+*_n8n.js
+*_workflow.py
+*_workflow.js
+*_publish.py
+*_publish.js
+*_wechat.py
+*_wechat.js
+*_api.py
+*_api.js
+*_server.py
+*_server.js
+*_draft.py
+*_draft.js
+
+# Local data files
+*.txt
+temp_content.txt
+*.csv
+*.json.backup
+*.json.fixed
+*.json.optimized
+*.json.minimal
+*.json.simple
+*.json.final
+*.json.complete
+*.json.full
+*.json.real
+*.json.short
+*.json.verbose
+*.json.with
+*.json.encoding
+*.json.formats
+*.json.coze
+*.json.html
+*.json.ip
+*.json.n8n
+*.json.workflow
+*.json.publish
+*.json.wechat
+*.json.api
+*.json.server
+*.json.draft
 
 # Submodules
 note-to-mp/
