--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.8.0",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "hono": "^4.0.0"
   },
   "devDependencies": {
