--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ pages_build_output_dir = "public"
 WX_APPID = "wx8410119dfbb7f756"
 WX_SECRET = "3c93e33e087e57b906f5c341aa5223b9"
 
-[env.development.vars]
+[env.preview.vars]
 WX_APPID = "wx8410119dfbb7f756"
 WX_SECRET = "3c93e33e087e57b906f5c341aa5223b9"
 
